DTS-53116: code formatting